@@ -1,3 +1,4 @@
+11 Aug 2010 High-Word Facility - Roger Bowler
 10 Aug 2010 'qcodepages' added as command to display valid codepages; 'codepage' command 
             enhanced to display the current codepage value, command changed to a PANEL command. 
             Paul Gorlinsky
